# TurkishVoice

./: .gitignore  CONTRIBUTING.md  README.md  demo_app.py  huggingface-README.md  pyproject.toml  requirements-demo.txt  requirements.txt  requirements_demo.txt
tests/integration/: __init__.py
tests/unit/: test_turkish.py
turkishvoice/: __init__.py
turkishvoice/api/: __init__.py  main.py
turkishvoice/cli/: __init__.py  __main__.py  main.py
turkishvoice/core/: __init__.py  engine.py  piper_engine.py  voice_cloner.py
turkishvoice/turkish/: __init__.py  g2p.py  stress_marker.py  text_normalizer.py  vowel_harmony.py
turkishvoice/utils/: __init__.py  model_downloader.py
turkishvoice/webui/: __init__.py  app.py
turkishvoice/webui/pages/: __init__.py
